# ProgettoPCS2025

./: CMakeLists.txt  main.cpp  main_test.cpp
Documentazione/: PlantUML_documentazione.txt
ExportParaview/: CMakeLists.txt  export.cpp
PoliedriMesh/Cell2Ds/: Cell0Ds.txt
src/: CMakeLists.txt  CamminoMinimo.cpp  CamminoMinimo.hpp  Duale.cpp  Duale.hpp  PoliedriMesh.hpp  Triangolazione.cpp  Triangolazione.hpp  Triangolazione_II.cpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  test_poliedri.hpp
